Preventing table to break on many Ontdubbelde Meldingen

--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -94,6 +94,14 @@
         }
     }
 
+    .clamped {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     .btn-textlink {
         display: flex;
         padding: 6px 0;
